--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -19,6 +19,8 @@
     "next": "13.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "eslint-config-custom": "*",
+    "tsconfig": "*",
     "typescript": "4.9.5"
   },
   "devDependencies": {
