--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -12,8 +12,6 @@
     "@types/node": "18.14.2",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
-    "embla-carousel-autoplay": "^7.0.9",
-    "embla-carousel-react": "^7.0.9",
     "eslint": "8.35.0",
     "eslint-config-custom": "*",
     "eslint-config-next": "13.2.1",
@@ -21,12 +19,18 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tsconfig": "*",
-    "typescript": "4.9.5"
+    "typescript": "4.9.5",
+    "@tailwindcss/forms": "^0.5.3",
+    "html2canvas": "^1.4.1",
+    "tailwind-scrollbar": "^3.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
     "sass": "^1.58.3",
-    "tailwindcss": "^3.2.7"
+    "tailwindcss": "^3.2.7",
+    "@headlessui/react": "^1.7.13",
+    "eslint-config-custom": "*",
+    "phosphor-react": "^1.4.1"
   }
 }
