--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@motionone/utils": "^10.15.1",
     "@tailwindcss/forms": "^0.5.3",
     "@types/node": "18.14.2",
     "@types/react": "18.0.28",
