--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
   "engines": {
     "node": ">=14.0.0"
   },
-  "packageManager": "npm@9.5.1"
+  "packageManager": "npm@9.5.1",
+  "dependencies": {
+    "@vercel/analytics": "^1.0.1"
+  }
 }
