--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -24,6 +24,8 @@
     "next": "13.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "flowbite": "^1.6.5",
+    "flowbite-react": "^0.4.4",
     "react-simple-typewriter": "^5.0.1",
     "tailwind-scrollbar": "^3.0.0",
     "tsconfig": "*",
