--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "packageManager": "npm@9.5.1",
   "dependencies": {
-    "@vercel/analytics": "^1.0.1"
+    "@vercel/analytics": "^1.0.1",
+    "react-player": "^2.13.0"
   }
 }
