--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -37,6 +37,7 @@
     "eslint-config-custom": "*",
     "phosphor-react": "^1.4.1",
     "postcss": "^8.4.21",
+    "react-player": "^2.13.0",
     "tailwindcss": "^3.2.7"
   }
 }
