--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -22,6 +22,7 @@
     "flowbite": "^1.6.5",
     "flowbite-react": "^0.4.4",
     "framer-motion": "^10.10.0",
+    "framer-motion-3d": "^10.16.14",
     "html2canvas": "^1.4.1",
     "next": "13.2.1",
     "react": "18.2.0",
