--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -10,12 +10,15 @@
   },
   "dependencies": {
     "@motionone/utils": "^10.15.1",
+    "@next/env": "^14.2.3",
     "@tailwindcss/forms": "^0.5.3",
     "@types/node": "18.14.2",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "@vercel/analytics": "^1.0.1",
     "axios": "^1.4.0",
+    "contentful": "^10.8.10",
+    "dotenv": "^16.4.5",
     "eslint": "8.35.0",
     "eslint-config-custom": "*",
     "eslint-config-next": "13.2.1",
@@ -24,7 +27,7 @@
     "framer-motion": "^10.10.0",
     "framer-motion-3d": "^10.16.14",
     "html2canvas": "^1.4.1",
-    "next": "13.2.1",
+    "next": "^14.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-simple-typewriter": "^5.0.1",
