--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -30,6 +30,7 @@
     "next": "^14.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-image-gallery": "^1.3.0",
     "react-simple-typewriter": "^5.0.1",
     "react-use-measure": "^2.1.1",
     "tailwind-scrollbar-hide": "^1.1.7",
@@ -38,6 +39,7 @@
   },
   "devDependencies": {
     "@headlessui/react": "^1.7.13",
+    "@types/react-image-gallery": "^1.2.4",
     "autoprefixer": "^10.4.14",
     "eslint-config-custom": "*",
     "phosphor-react": "^1.4.1",
