--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -4,9 +4,10 @@
   "main": "index.js",
   "scripts": {
     "dev": "tsx watch src/server.ts",
-    "prisma:generate": "prisma generate",
     "build": "prisma generate",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node dist/server.js",             
+    "prisma:generate": "prisma generate",
+    "prisma:migrate": "prisma migrate deploy"
   },
   "keywords": [],
   "author": "",
