--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -14,14 +14,18 @@
     "@types/react": "18.0.29",
     "@types/react-dom": "18.0.11",
     "axios": "^1.8.4",
+    "date-fns": "^4.1.0",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
+    "framer-motion": "^12.7.4",
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-intersection-observer": "^9.16.0",
     "typescript": "5.0.2"
   },
   "devDependencies": {
+    "@svgr/webpack": "^8.1.0",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.7"
