--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "dev": "tsx watch src/server.ts",
     "build": "prisma generate",
-    "start": "node dist/server.js",             
-    "prepare": "tsc",                          
+    "start": "node dist/server.js",
+    "prepare": "tsc",
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate deploy"
   },
@@ -16,6 +16,7 @@
   "description": "",
   "devDependencies": {
     "@types/cors": "^2.8.17",
+    "@types/dotenv": "^6.1.1",
     "@types/express": "^5.0.1",
     "@types/multer": "^1.4.12",
     "@types/node": "^22.14.0",
@@ -25,9 +26,12 @@
   },
   "dependencies": {
     "@prisma/client": "^6.5.0",
+    "cloudinary": "^1.41.3",
     "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "multer": "^1.4.5-lts.2",
+    "multer-storage-cloudinary": "^4.0.0",
     "pg": "^8.14.1",
     "prisma": "^6.5.0",
     "tsx": "^4.19.3"
